--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -29,7 +29,6 @@ jobs:
             - name: Run frontend test
               run: npm run test
             - name: Analyze code with SonarQube
-              continue-on-error: true
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
                   SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
@@ -39,19 +38,10 @@ jobs:
                   else
                       echo No SONAR_TOKEN, skipping...
                   fi
-            #- name: Package application
-              #run: ./mvnw -ntp package deploy -Pprod -DskipTests
             - name: Package application
-              run: |
-                cat ~/.m2/settings.xml
-                mvn -ntp package deploy -Pprod -DskipTests
-
-                                
+              run: ./mvnw -ntp package deploy -Pprod -DskipTests
             - name: Deploy to Heroku
               if: github.event_name == 'push' && github.ref == 'refs/heads/master'
               env:
                   HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
               run: ./mvnw -ntp com.heroku.sdk:heroku-maven-plugin:2.0.5:deploy -DskipTests -Pprod -Dheroku.buildpacks=heroku/jvm -Dheroku.appName=pro-biblio
-
-
-            
