Correction Yml pb authentification avec Jfrog

--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -40,10 +40,16 @@ jobs:
                       echo No SONAR_TOKEN, skipping...
                   fi
             - name: Package application
+              env:
+                #maven-local-repo-path: ${{ secrets.JFROG_OSS_REPO_SNAPSHOTS }}
+                maven-repo-server-id: snapshots
+                maven-repo-server-username: ${{ secrets.JFROG_OSS_REPO_USER }}
+                maven-repo-server-password: ${{ secrets.JFROG_OSS_REPO_PASS }}
               run: |
                   cat ~/.m2/settings.xml
                   mvn -ntp package deploy -Pprod -DskipTests
               #./mvnw -ntp package deploy -Pprod -DskipTests
+
             - name: Deploy to Heroku
               if: github.event_name == 'push' && github.ref == 'refs/heads/master'
               env:
