--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -41,7 +41,7 @@ jobs:
                   fi
             - name: Package application
               env:
-                #maven-local-repo-path: ${{ secrets.JFROG_OSS_REPO_SNAPSHOTS }}
+                maven-local-repo-path: ${{secrets.JFROG_OSS_REPO_SNAPSHOTS }}
                 maven-repo-server-id: snapshots
                 maven-repo-server-username: ${{ secrets.JFROG_OSS_REPO_USER }}
                 maven-repo-server-password: ${{ secrets.JFROG_OSS_REPO_PASS }}
