--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -1,8 +1,4 @@
 name: Application CI
-trigger:
-  branches:
-    include:
-    - sarujan
 on: [push, pull_request]
 jobs:
     pipeline:
@@ -43,6 +39,30 @@ jobs:
                   else
                       echo No SONAR_TOKEN, skipping...
                   fi
+
+
+                  
+            - name: Cache SonarCloud packages
+              uses: actions/cache@v1
+              with:
+                path: ~/.sonar/cache
+                key: ${{ runner.os }}-sonar
+                restore-keys: ${{ runner.os }}-sonar
+            - name: Cache Maven packages
+              uses: actions/cache@v1
+              with:
+                path: ~/.m2
+                key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+                restore-keys: ${{ runner.os }}-m2
+            - name: Build and analyze
+              env:
+                GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
+                SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+              run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar
+
+
+
+
             - name: Package application
               env:
                 #maven-local-repo-path: ${{secrets.JFROG_OSS_REPO_SNAPSHOTS }}
