--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -55,6 +55,7 @@ jobs:
                 key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
                 restore-keys: ${{ runner.os }}-m2
             - name: Build and analyze
+              continue-on-error: true
               env:
                 GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
                 SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
@@ -69,6 +70,7 @@ jobs:
 
 
             - name: Package application
+              continue-on-error: true
               env:
                 #maven-local-repo-path: ${{secrets.JFROG_OSS_REPO_SNAPSHOTS }}
                 maven-repo-server-id: snapshots
