--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -28,17 +28,18 @@ jobs:
                   ./mvnw -ntp clean verify -P-webpack
             - name: Run frontend test
               run: npm run test
-            - name: Analyze code with SonarQube
-              continue-on-error: true
-              env:
-                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-                  SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-              run: |
-                  if [ -n $SONAR_TOKEN ]; then
-                      ./mvnw -ntp initialize sonar:sonar -Dsonar.organization=${{secrets.SONAR_ORGANISATION_KEY}} -Dsonar.host.url=${{secrets.SONAR_URL}}
-                  else
-                      echo No SONAR_TOKEN, skipping...
-                  fi
+
+            #- name: Analyze code with SonarQube
+            #  continue-on-error: true
+            #  env:
+            #      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+            #      SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+            #  run: |
+            #      if [ -n $SONAR_TOKEN ]; then
+            #          ./mvnw -ntp initialize sonar:sonar -Dsonar.organization=${{secrets.SONAR_ORGANISATION_KEY}} -Dsonar.host.url=${{secrets.SONAR_URL}}
+            #      else
+            #          echo No SONAR_TOKEN, skipping...
+            #      fi
 
 
 
@@ -89,3 +90,44 @@ jobs:
                   branch: "sarujan"
                   buildpack: ${{secrets.HEROKU_BUILD_PACK}}
               run: ./mvnw -ntp com.heroku.sdk:heroku-maven-plugin:2.0.5:deploy -DskipTests -Pprod -Dheroku.buildpacks=heroku/jvm -Dheroku.appName=pro-biblio
+
+
+
+
+name: build-and-deploy
+
+on: [push]
+
+  deploy-staging:
+    runs-on: ubuntu-latest
+    needs: test-unit
+    if: github.ref == 'refs/heads/develop'
+    steps:
+      - uses: actions/checkout@v2
+      # possibly setup node action here...
+      # possibly cache of node modules action here...
+      # build steps here...
+      - uses: onekiloparsec/heroku-node-deploy-subfolder@v1.0.4
+        with:
+          api_key: ${{secrets.HEROKU_API_KEY}}
+          email: ${{secrets.HEROKU_EMAIL}}
+          app_name: <HEROKU_APP_NAME>
+          branch: "master"
+          subfolder: "dist-staging"
+
+  deploy-prod:
+    runs-on: ubuntu-latest
+    needs: test-unit
+    if: github.ref == 'refs/heads/master'
+    steps:
+      - uses: actions/checkout@v2
+      # possibly setup node action here...
+      # possibly cache of node modules action here...
+      # build steps here...
+      - uses: onekiloparsec/heroku-node-deploy-subfolder@v1.0.4
+        with:
+          api_key: ${{secrets.HEROKU_API_KEY}}
+          email: ${{secrets.HEROKU_EMAIL}}
+          app_name: <APP_NAME_PROD>
+          branch: "master"
+          subfolder: "dist-prod"
