--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -93,41 +93,23 @@ jobs:
 
 
 
-
-name: build-and-deploy
-
+name: Deploy on HEROKU -2
 on: [push, pull_request]
-
-deploy-staging:
-  runs-on: ubuntu-latest
-  needs: test-unit
-  if: github.ref == 'refs/heads/develop'
-  steps:
-    - uses: actions/checkout@v2
-    # possibly setup node action here...
-    # possibly cache of node modules action here...
-    # build steps here...
-    - uses: onekiloparsec/heroku-node-deploy-subfolder@v1.0.4
-      with:
-        api_key: ${{secrets.HEROKU_API_KEY}}
-        email: ${{secrets.HEROKU_EMAIL}}
-        app_name: <HEROKU_APP_NAME>
-        branch: "master"
-        subfolder: "dist-staging"
-
-deploy-prod:
-  runs-on: ubuntu-latest
-  needs: test-unit
-  if: github.ref == 'refs/heads/master'
-  steps:
-    - uses: actions/checkout@v2
-    # possibly setup node action here...
-    # possibly cache of node modules action here...
-    # build steps here...
-    - uses: onekiloparsec/heroku-node-deploy-subfolder@v1.0.4
-      with:
-        api_key: ${{secrets.HEROKU_API_KEY}}
-        email: ${{secrets.HEROKU_EMAIL}}
-        app_name: <APP_NAME_PROD>
-        branch: "master"
-        subfolder: "dist-prod"
+jobs:
+    pipeline:
+        name: proBiblio pipeline -2 
+        runs-on: ubuntu-latest
+        needs: test-unit
+        if: github.ref == 'refs/heads/sarujan'
+        steps:
+          - uses: actions/checkout@v2
+          # possibly setup node action here...
+          # possibly cache of node modules action here...
+          # build steps here...
+          - uses: onekiloparsec/heroku-node-deploy-subfolder@v1.0.4
+            with:
+              api_key: ${{secrets.HEROKU_API_KEY}}
+              email: ${{secrets.HEROKU_EMAIL}}
+              app_name: <HEROKU_APP_NAME>
+              branch: "master"
+              subfolder: "dist-staging"
