--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -97,18 +97,13 @@ jobs:
             - name: DEPLOY TO HEROKU -2
               runs-on: ubuntu-latest
               needs: test-unit
+              uses: onekiloparsec/heroku-node-deploy-subfolder@v1.0.4
               if: github.ref == 'refs/heads/sarujan'
-              steps:
-                - uses: actions/checkout@v2
-                # possibly setup node action here...
-                # possibly cache of node modules action here...
-                # build steps here...
-                - uses: onekiloparsec/heroku-node-deploy-subfolder@v1.0.4
-                  with:
-                    api_key: ${{secrets.HEROKU_API_KEY}}
-                    email: ${{secrets.HEROKU_EMAIL}}
-                    app_name: <HEROKU_APP_NAME>
-                    branch: "master"
-                    #subfolder: "dist-staging"
-                    run: ./mvnw -ntp com.heroku.sdk:heroku-maven-plugin:2.0.5:deploy -DskipTests -Pprod -Dheroku.buildpacks=heroku/jvm -Dheroku.appName
+              env:
+                  api_key: ${{secrets.HEROKU_API_KEY}}
+                  email: ${{secrets.HEROKU_EMAIL}}
+                  app_name: <HEROKU_APP_NAME>
+                  branch: "master"
+                  #subfolder: "dist-staging"
+                  run: ./mvnw -ntp com.heroku.sdk:heroku-maven-plugin:2.0.5:deploy -DskipTests -Pprod -Dheroku.buildpacks=heroku/jvm -Dheroku.appName
 
