--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -87,23 +87,8 @@ jobs:
                   HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
                   heroku_app_name: ${{secrets.HEROKU_APP_NAME}} #Must be unique in Heroku
                   heroku_email: ${{secrets.HEROKU_EMAIL}}
-                  branch: "sarujan"
-                  buildpack: ${{secrets.HEROKU_BUILD_PACK}}
-              run: ./mvnw -ntp com.heroku.sdk:heroku-maven-plugin:2.0.5:deploy -DskipTests -Pprod -Dheroku.buildpacks=heroku/jvm -Dheroku.appName=pro-biblio
-
-
-
-
-            - name: DEPLOY TO HEROKU -2
-              runs-on: ubuntu-latest
-              needs: test-unit
-              uses: onekiloparsec/heroku-node-deploy-subfolder@v1.0.4
-              if: github.ref == 'refs/heads/sarujan'
-              env:
-                  api_key: ${{secrets.HEROKU_API_KEY}}
-                  email: ${{secrets.HEROKU_EMAIL}}
-                  app_name: <HEROKU_APP_NAME>
                   branch: "master"
-                  #subfolder: "dist-staging"
-                  run: ./mvnw -ntp com.heroku.sdk:heroku-maven-plugin:2.0.5:deploy -DskipTests -Pprod -Dheroku.buildpacks=heroku/jvm -Dheroku.appName
+                  buildpack: ${{secrets.HEROKU_BUILD_PACK}}
+              run: ./mvnw -ntp com.heroku.sdk:heroku-maven-plugin:2.0.5:deploy -DskipTests -Pprod -Dheroku.buildpacks=heroku/jvm -Dheroku.appName=${{secrets.HEROKU_APP_NAME}}
+
 
