Test deployement sur Heroku

--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -22,12 +22,12 @@ jobs:
                   java-version: '11.x'
             - name: Install node.js packages
               run: npm install
-            - name: Run backend test
-              run: |
-                  chmod +x mvnw
-                  ./mvnw -ntp clean verify -P-webpack
-            - name: Run frontend test
-              run: npm run test
+            #- name: Run backend test
+            #  run: |
+            #      chmod +x mvnw
+            #      ./mvnw -ntp clean verify -P-webpack
+            #- name: Run frontend test
+            #  run: npm run test
 
             #- name: Analyze code with SonarQube
             #  continue-on-error: true
@@ -97,8 +97,7 @@ jobs:
       runs-on: ubuntu-20.04
       steps:
         - uses: actions/checkout@v2
-        if: github.event_name == 'push' && github.ref == 'refs/heads/sarujan'
-        uses: akhileshns/heroku-deploy@v3.6.8 # This is the action
+        - uses: akhileshns/heroku-deploy@v3.6.8 # This is the action
           with:
             heroku_api_key: ${{secrets.HEROKU_API_KEY}}
             heroku_app_name: ${{secrets.HEROKU_APP_NAME}} #Must be unique in Heroku
