--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -97,11 +97,13 @@ jobs:
                  mvn -ntp package deploy -Pprod -DskipTests
 
             - name: Deploy to Heroku
-              if: github.event_name == 'push' && github.ref == 'refs/heads/master'
-              env:
-                  HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
-                  heroku_app_name: ${{secrets.HEROKU_APP_NAME}} #Must be unique in Heroku
-                  heroku_email: ${{secrets.HEROKU_EMAIL}}
-                  branch: "master"
-                  buildpack: ${{secrets.HEROKU_BUILD_PACK}}
-              run: ./mvnw -ntp com.heroku.sdk:heroku-maven-plugin:2.0.5:deploy -DskipTests -Pprod -Dheroku.buildpacks=heroku/jvm -Dheroku.appName=pro-biblio
+              runs-on: ubuntu-20.04
+              steps:
+                - uses: actions/checkout@v2
+                - uses: akhileshns/heroku-deploy@v3.6.8 # This is the action
+                  with:
+                    heroku_api_key: ${{secrets.HEROKU_API_KEY}}
+                    heroku_app_name: ${{secrets.HEROKU_APP_NAME}} #Must be unique in Heroku
+                    heroku_email: ${{secrets.HEROKU_EMAIL}}
+                    branch: "master"
+                    buildpack: ${{secrets.HEROKU_BUILD_PACK}}
