--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -68,7 +68,18 @@ jobs:
                   fi
 
 
-
+            - name: Analyze code with SonarQube
+              continue-on-error: true
+              env:
+                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+                  SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+              run: |
+                  java -version
+                  if [ -n $SONAR_TOKEN ]; then
+                      mvn -ntp initialize sonar:sonar -Dsonar.organization=${{ secrets.SONAR_ORGANISATION_KEY }} -Dsonar.host.url=${{ secrets.SONAR_URL }}
+                  else
+                      echo No SONAR_TOKEN, skipping...
+                  fi
             #- name: Package application
             #  env:
             #    #maven-local-repo-path: ${{secrets.JFROG_OSS_REPO_SNAPSHOTS }}
@@ -105,3 +116,18 @@ jobs:
                   branch: "master"
                   buildpack: ${{secrets.HEROKU_BUILD_PACK}}
               run: ./mvnw -ntp com.heroku.sdk:heroku-maven-plugin:2.0.5:deploy -DskipTests -Pprod -Dheroku.buildpacks=heroku/jvm -Dheroku.appName=${{secrets.HEROKU_APP_NAME}}
+
+
+
+            - name: Deploy to Herroku
+              needs: pipeline
+              runs-on: ubuntu-20.04
+              steps:
+                - uses: actions/checkout@v2
+                - uses: akhileshns/heroku-deploy@v3.6.8 # This is the action
+                  with:
+                    heroku_api_key: ${{secrets.HEROKU_API_KEY}}
+                    heroku_app_name: ${{secrets.HEROKU_APP_NAME}} #Must be unique in Heroku
+                    heroku_email: ${{secrets.HEROKU_EMAIL}}
+                    branch: "master"
+                    buildpack: ${{secrets.HEROKU_BUILD_PACK}}
