--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -123,7 +123,7 @@ jobs:
               needs: pipeline
               runs-on: ubuntu-20.04
               steps:
-                - uses: actions/checkout@v2
+                #- uses: actions/checkout@v2
                 - uses: akhileshns/heroku-deploy@v3.6.8 # This is the action
                   with:
                     heroku_api_key: ${{secrets.HEROKU_API_KEY}}
