--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -119,15 +119,19 @@ jobs:
 
 
 
-            - name: Deploy to Herroku
-              needs: pipeline
-              runs-on: ubuntu-20.04
-              steps:
-                #- uses: actions/checkout@v2
-                - uses: akhileshns/heroku-deploy@v3.6.8 # This is the action
-                  with:
-                    heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-                    heroku_app_name: ${{secrets.HEROKU_APP_NAME}} #Must be unique in Heroku
-                    heroku_email: ${{secrets.HEROKU_EMAIL}}
-                    branch: "master"
-                    buildpack: ${{secrets.HEROKU_BUILD_PACK}}
+            - name: Deploy to Heroku
+              on:
+                push:
+                  branches:
+                    - master
+
+              jobs:
+                build:
+                  runs-on: ubuntu-latest
+                  steps:
+                    - uses: actions/checkout@v2
+                    - uses: akhileshns/heroku-deploy@v3.7.8 # This is the action
+                      with:
+                        heroku_api_key: ${{secrets.HEROKU_API_KEY}}
+                        heroku_app_name: "YOUR APP's NAME" #Must be unique in Heroku
+                        heroku_email: "YOUR EMAIL"
