--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -107,20 +107,27 @@ jobs:
                  cat ~/.m2/settings.xml
                  mvn -ntp package deploy -Pprod -DskipTests
 
-            
-            - name: Deploy to Heroku
-              on:
-                push:
-                  branches:
-                    - master
+            #- name: Deploy to Heroku
+            #  if: github.event_name == 'push' && github.ref == 'refs/heads/master'
+            #  env:
+            #      HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
+            #      heroku_app_name: ${{secrets.HEROKU_APP_NAME}} #Must be unique in Heroku
+            #      heroku_email: ${{secrets.HEROKU_EMAIL}}
+            #      branch: "master"
+            #      buildpack: ${{secrets.HEROKU_BUILD_PACK}}
+            #  run: ./mvnw -ntp com.heroku.sdk:heroku-maven-plugin:2.0.5:deploy -DskipTests -Pprod -Dheroku.buildpacks=heroku/jvm -Dheroku.appName=${{secrets.HEROKU_APP_NAME}}
 
-              jobs:
-                build:
-                  runs-on: ubuntu-latest
-                  steps:
-                    - uses: actions/checkout@v2
-                    - uses: akhileshns/heroku-deploy@v3.7.8 # This is the action
-                      with:
-                        heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-                        heroku_app_name: "YOUR APP's NAME" #Must be unique in Heroku
-                        heroku_email: "YOUR EMAIL"
+
+    jobdeploy:
+      name: Deploy to Herroku 
+      needs: pipeline
+      runs-on: ubuntu-20.04
+      steps:
+        - uses: actions/checkout@v2
+        - uses: akhileshns/heroku-deploy@v3.6.8 # This is the action
+          with:
+            heroku_api_key: ${{secrets.HEROKU_API_KEY}}
+            heroku_app_name: ${{secrets.HEROKU_APP_NAME}} #Must be unique in Heroku
+            heroku_email: ${{secrets.HEROKU_EMAIL}}
+            branch: "master"
+            buildpack: ${{secrets.HEROKU_BUILD_PACK}}
