--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -129,5 +129,5 @@ jobs:
             heroku_api_key: ${{secrets.HEROKU_API_KEY}}
             heroku_app_name: ${{secrets.HEROKU_APP_NAME}} #Must be unique in Heroku
             heroku_email: ${{secrets.HEROKU_EMAIL}}
-            branch: "sarujan"
+            branch: "master"
             buildpack: ${{secrets.HEROKU_BUILD_PACK}}
