--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -68,18 +68,32 @@ jobs:
                   fi
 
 
-            - name: Analyze code with SonarQube
+            #- name: Analyze code with SonarQube
+            #  continue-on-error: true
+            #  env:
+            #      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+            #      SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+            #  run: |
+            #      java -version
+            #      if [ -n $SONAR_TOKEN ]; then
+            #          mvn -ntp initialize sonar:sonar -Dsonar.organization=${{ secrets.SONAR_ORGANISATION_KEY }} -Dsonar.host.url=${{ secrets.SONAR_URL }}
+            #      else
+            #          echo No SONAR_TOKEN, skipping...
+            #      fi
+                
+            - name: SonarCloud Scan
               continue-on-error: true
+              - uses: actions/checkout@v2
+              - uses: sonarsource/sonarcloud-github-action@master
+              with:
+                # Disabling shallow clone is recommended for improving relevancy of reporting
+                fetch-depth: 0
               env:
-                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-                  SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-              run: |
-                  java -version
-                  if [ -n $SONAR_TOKEN ]; then
-                      mvn -ntp initialize sonar:sonar -Dsonar.organization=${{ secrets.SONAR_ORGANISATION_KEY }} -Dsonar.host.url=${{ secrets.SONAR_URL }}
-                  else
-                      echo No SONAR_TOKEN, skipping...
-                  fi
+                GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+                SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+
+
+
             #- name: Package application
             #  env:
             #    #maven-local-repo-path: ${{secrets.JFROG_OSS_REPO_SNAPSHOTS }}
