--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -67,19 +67,6 @@ jobs:
             #          echo No SONAR_TOKEN, skipping...
             #      fi
 
-
-            #- name: Analyze code with SonarQube
-            #  continue-on-error: true
-            #  env:
-            #      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-            #      SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-            #  run: |
-            #      java -version
-            #      if [ -n $SONAR_TOKEN ]; then
-            #          mvn -ntp initialize sonar:sonar -Dsonar.organization=${{ secrets.SONAR_ORGANISATION_KEY }} -Dsonar.host.url=${{ secrets.SONAR_URL }}
-            #      else
-            #          echo No SONAR_TOKEN, skipping...
-            #      fi
                 
             - name: SonarCloud Scan
               continue-on-error: true
@@ -87,14 +74,19 @@ jobs:
               env:
                 GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
                 SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-              run: |
-                java -version
-                if [ -n $SONAR_TOKEN ]; then
-                    mvn -ntp initialize sonar:sonar -Dsonar.organization=${{ secrets.SONAR_ORGANISATION_KEY }} -Dsonar.host.url=${{ secrets.SONAR_URL }}
-                else
-                    echo No SONAR_TOKEN, skipping...
-                fi
 
+            - name: SonarCloud Scan - build
+              continue-on-error: true
+              env:
+                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+                  SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+              run: |
+                  java -version
+                  if [ -n $SONAR_TOKEN ]; then
+                      mvn -ntp initialize sonar:sonar -Dsonar.organization=${{ secrets.SONAR_ORGANISATION_KEY }} -Dsonar.host.url=${{ secrets.SONAR_URL }}
+                  else
+                      echo No SONAR_TOKEN, skipping...
+                  fi
 
 
             #- name: Package application
