--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -75,15 +75,14 @@ jobs:
                 GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
                 SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
-            - name: SonarCloud Scan - build
+            - name: Analyze code with SonarQube
               continue-on-error: true
               env:
-                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-                  SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+                  GITHUB_TOKEN: ${{secrets.YOUR_GITHUB_TOKEN }}
+                  SONAR_TOKEN: ${{secrets.SONAR_TOKEN }}
               run: |
-                  java -version
                   if [ -n $SONAR_TOKEN ]; then
-                      mvn -ntp initialize sonar:sonar -Dsonar.organization=${{ secrets.SONAR_ORGANISATION_KEY }} -Dsonar.host.url=${{ secrets.SONAR_URL }}
+                      ./mvnw -ntp initialize sonar:sonar -Dsonar.organization=${{secrets.SONAR_ORGANISATION_KEY}} -Dsonar.host.url=${{secrets.SONAR_URL}} -Dsonar.projectName=Ynov_TEST_Projet
                   else
                       echo No SONAR_TOKEN, skipping...
                   fi
