--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -82,7 +82,7 @@ jobs:
                   SONAR_TOKEN: ${{secrets.SONAR_TOKEN }}
               run: |
                   if [ -n $SONAR_TOKEN ]; then
-                      ./mvnw -ntp initialize sonar:sonar -Dsonar.organization=${{secrets.SONAR_ORGANISATION_KEY}} -Dsonar.host.url=${{secrets.SONAR_URL}} -Dsonar.projectName=Ynov_TEST_Projet
+                      ./mvnw -ntp initialize sonar:sonar -Dsonar.organization=${{secrets.SONAR_ORGANISATION_KEY}} -Dsonar.host.url=${{secrets.SONAR_URL}} -Dsonar.projectName=pro-biblio
                   else
                       echo No SONAR_TOKEN, skipping...
                   fi
