MAJ github ci-cd

--- a/pom.xml
+++ b/pom.xml
@@ -174,9 +174,9 @@
         <junit.utReportFolder>${project.testresult.directory}/test</junit.utReportFolder>
         <junit.itReportFolder>${project.testresult.directory}/integrationTest</junit.itReportFolder>
         <!-- jhipster-needle-maven-property -->
-        <!--<sonar.projectKey>rsarujan_Ynov_TEST_Projet</sonar.projectKey>
+        <sonar.projectKey>rsarujan_Ynov_TEST_Projet</sonar.projectKey>
         <sonar.organization>rsarujan</sonar.organization>
-        <sonar.host.url>https://sonarcloud.io</sonar.host.url>-->
+        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
     </properties>
 
 
