--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -75,18 +75,23 @@ jobs:
                 GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
                 SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
-            - name: Analyze code with SonarQube
-              continue-on-error: true
-              env:
-                  GITHUB_TOKEN: ${{secrets.YOUR_GITHUB_TOKEN }}
-                  SONAR_TOKEN: ${{secrets.SONAR_TOKEN }}
-              run: |
-                  if [ -n $SONAR_TOKEN ]; then
-                      ./mvnw -ntp initialize sonar:sonar -Dsonar.organization=${{secrets.SONAR_ORGANISATION_KEY}} -Dsonar.host.url=${{secrets.SONAR_URL}} -Dsonar.projectName=pro-biblio
-                  else
-                      echo No SONAR_TOKEN, skipping...
-                  fi
+            #- name: Analyze code with SonarQube
+            #  continue-on-error: true
+            #  env:
+            #      GITHUB_TOKEN: ${{secrets.YOUR_GITHUB_TOKEN }}
+            #      SONAR_TOKEN: ${{secrets.SONAR_TOKEN }}
+            #  run: |
+            #      if [ -n $SONAR_TOKEN ]; then
+            #          ./mvnw -ntp initialize sonar:sonar -Dsonar.organization=${{secrets.SONAR_ORGANISATION_KEY}} -Dsonar.host.url=${{secrets.SONAR_URL}} -Dsonar.projectName=pro-biblio
+            #      else
+            #          echo No SONAR_TOKEN, skipping...
+            #      fi
 
+            - name: Build and analyze
+              env:
+                GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
+                SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+              run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar
 
             #- name: Package application
             #  env:
