--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -91,7 +91,7 @@ jobs:
               env:
                 GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
                 SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-              run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar
+              run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.organization=${{secrets.SONAR_ORGANISATION_KEY}} -Dsonar.host.url=${{secrets.SONAR_URL}}
 
             #- name: Package application
             #  env:
