--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -88,6 +88,7 @@ jobs:
             #      fi
 
             - name: Build and analyze
+              continue-on-error: true
               env:
                 GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
                 SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
