--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -101,7 +101,7 @@ jobs:
                 sonar_url: "https://sonarcloud.io"
                 sonar_branch: "master"
                 sonar_token: ${{ secrets.SONAR_TOKEN }}
-                project_key: "rsarujan_Ynov_TEST_Projet"
+                project_key: "proBiblio"
 
             #- name: Package application
             #  env:
